Tue May 15 19:19:38 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * XSC/be/CXX/Source.cpp:
        * XSC/be/CXX/WriterSource.cpp:
          Try to get the regeneration of the DAnCE config handlers working
          again

Tue May 15 19:06:36 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * XSC/be/CXX/Elements.hpp:
        * XSC/be/CXX/Elements.cpp:
        * XSC/be/CXX/Source.cpp:
        * XSC/be/CXX/WriterSource.cpp:
        * XSC/be/IDL/Elements.hpp:
          Try to get the regeneration of the DAnCE config handlers working
          again

Mon May 14 14:00:54 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * XSC/utils/XSC_Utils.mpc:
          XSC does't use ACE

Sun May 13 12:46:15 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * XSC/XSC_BE.mpc:
          XSC does't use ACE

Wed May  2 05:12:20 UTC 2012  Dennis Feiock <dfeiock at iupui dot edu>

        * MPC/config/xsc_be.mpb:

          Added boost_system base project to fix compilation errors
          with Boost 1.48.0

Fri Dec 23 18:19:52 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * MPC/config/xsc_be.mpb:
        * XSC/XSC_BE.mpc:

          Added BOOST_FILE_SYSTEM macros so that XSC can build
          against the latest version of Boost.

Fri Dec 23 18:06:53 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * MPC/config/xsc_be.mpb:
        * XSC/be/CXX/libCXX.mpc:
        * XSC/be/IDL/libIDL.mpc:

          Fixed compilation errors related to project specification.

Wed Oct 26 16:53:50 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * MPC/config/xscrt.mpb:

          Updated the dependencies.

Wed Sep 21 05:29:26 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * MPC/config/ccf_root.mpb:
        * MPC/config/utility.mpb:
        * MPC/config/xsc_be.mpb:
        * XSC/be/CXX/libCXX.mpc:
        * XSC/be/IDL/libIDL.mpc:

          Fixed build errors related to removing the CCF_ROOT